<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    </data>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llTrasmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/trade_mark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lines="2"
                android:text="@string/trade_mark"
                android:textColor="@color/color3"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llFeatured"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/featured" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lines="2"
                android:text="@string/featured"
                android:textColor="@color/color4"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/llOffers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/discount" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:lines="2"
                android:text="@string/offers"
                android:textColor="@color/color4"
                android:textSize="14sp" />
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recviewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progBarCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tvNoDataCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_data_to_show"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>