<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.socialcafe.models.CreateOrderModel" />

        <variable
            name="lang"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".activities_fragments.activity_order_details.OrderDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@color/white"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"

                >

                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:clickable="false"
                        android:longClickable="false"
                        android:padding="8dp"
                        android:rotation='@{lang.equals("en")?140:0}'
                        android:src="@drawable/ic_arrow_right"
                        app:tint="@color/gray19" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:clickable="false"
                        android:gravity="center"
                        android:longClickable="false"
                        android:text="@string/order_detials"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/products"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/small_round_gray9"
                    android:padding="8dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </FrameLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:padding="3dp"
                        android:text="@string/total1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text='@{String.format("%.2f",model.grand_total)+""}'
                        android:textColor="@color/black"
                        android:textSize="14sp"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_primary"
                        android:text="@string/add_product"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                    <Button
                        android:id="@+id/btnChange"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_primary"
                        android:text="@string/change_table"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btnendorder"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_primary"
                        android:text="@string/end_order"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>
